--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Davit20066.github.io/weather-app",
+  "homepage": "http://Davit20066.github.io/Weather",
   "name": "weather-app",
   "version": "0.1.0",
   "private": true,
